
* Unreleased (master)
+ *New modules:*
  + =tools/password-store= -- Emacs as a password manager, using [[https://www.passwordstore.org/][pass]] as a backend (contributed by [[https://github.com/bandresen][brandresen]]).
  + =app/irc= -- Emacs as an IRC client, using circe (contributed by [[https://github.com/bandresen][brandresen]]).
+ =core=
  + =core-ui=
    + Add quit confirmation when trying to close a frame that contains real buffers.
    + Fix quit confirmations for clients connected to ~emacs --daemon~ with ~emacsclient~.
  + =core-packages=
    + When a quelpa package is deleted, its build repo (in ~quelpa-build-dir~) is now deleted with it.
+ =feature=
  + =feature/evil=
    + Remove =goto-last-change=, which conflicts with =goto-chg=, which is a dependency of evil (that does the exact same thing, but is what evil uses).
+ =lang=
  + =lang/org=
    + Fix M-RET in plain lists not preserving indent level for new items.
    + Fix cursor jumping away when toggling folds or realigning org tables (pressing TAB).

* 2.0.3 (Jun 11, 2017)
+ *New modules*
  + =ui/unicode= -- fixes unicode font-rendering for a variety of languages, using [[https://github.com/rolandwalker/unicode-fonts][unicode-fonts]].
  + =ui/evil-goggles= -- visual feedback for edit operations in evil-mode, using [[https://github.com/edkolev/evil-goggles][evil-goggles]].
  + =ui/nav-flash= (extracted from =ui/doom=) -- flashes current line when moving cursor considerable distrances, using [[https://github.com/rolandwalker/nav-flash][nav-flash]].
  + =tools/neotree= (extracted from =feature/evil=) -- a file explorer sidebar, using [[https://github.com/jaypei/emacs-neotree/][neotree]].
+ =core=
  + New special file: =private/<user-login-name>/init.el= is now loaded before modules (after core).
  + =:private <user-login-name>= is now automatically loaded by ~doom!~.
  + New help command: ~doom/describe-module~ -- for DOOM modules.